# tempora

./: .env.template  .eslintrc.json  .gitignore  LICENSE  README.md  env.d.ts  package.json  tailwind.config.js  tsconfig.json
__tests__/: proxyAccountsHelper.test.tsx  useContract.test.tsx  useFeeEstimation.test.tsx  useProxyAccount.test.tsx  useSchedulePayment.test.tsx
__tests__/mocks/: contractHelper.mock.ts  oakHelper.mock.ts  polkadotjsContractsHelper.mock.ts  polkadotjsHelper.mock.ts  proxyAccountsHelper.mock.ts  useContract.mock.ts  useFeeEstimation.mock.ts  useProxyAccounts.mock.ts  useWallet.mock.ts
__tests__/providers/: recoilProvider.mock.tsx
app/: globals.css  layout.tsx  page.tsx
app/my-payments/: page.tsx
app/new-recurring-payment/: page.tsx
contracts/tempora_contract/: Cargo.toml  lib.rs
src/components/dashboard/: AccountCard.tsx  AccountsWidget.tsx  ConnectWalletWidget.tsx  ProxyAccountsWidget.tsx  SetupSection.tsx
src/components/layout/: Root.tsx
src/components/my-payments/: MyPaymentsContainer.tsx  PaymentCard.tsx
src/components/navigation/: Navbar.tsx
src/components/new-recurring-payment/: CreatePaymentForm.tsx  CreatePaymentSummary.tsx  RecurringField.tsx
src/components/wallets/: AccountSelection.tsx  WalletList.tsx  WalletSelectorModal.tsx
src/core/models/: environment.ts
src/lib/config/: chainsConfig.ts  tokensConfig.ts
src/lib/constants/: app.const.ts  chains.const.ts  routes.const.ts  xcm.const.ts
src/lib/contracts/: psp22_contract_metadata.json  tempora_contract_metadata.json
zombienet/: turing-shibuya.toml
(+41 files in other folders)
